--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ function saveToFirebase() {
 // Admin
 function openAdmin(){
     const pwd=prompt("Enter admin password:");
-    if(pwd==="1234") document.getElementById("admin-modal").style.display="flex";
+    if(pwd==="Smiling-1092") document.getElementById("admin-modal").style.display="flex";
     else alert("Incorrect password!");
 }
 function closeAdmin(){document.getElementById("admin-modal").style.display="none";}
@@ -275,3 +275,4 @@ loadFromFirebase();
 
 </body>
 </html>
+
